# dash_sample

./: .gitignore  README.md  dash_config.yml.template  docker-compose.yml  ds_config.yml.template  pyproject.toml  requirements.txt
dash_app/: Dockerfile  app.py  db.py
dash_app/scripts/: runner.py
data_source/: Dockerfile  app.py
data_source/db/: __init__.py  db.py  exceptions.py  postgres.py
data_source/scripts/: runner.py
data_source/sql/: install.sql
tests/: test_dash_sample.py
utils/: helpers.py  reader.py
