[tool.poetry]
name = "dash_sample"
version = "0.1.0"
description = ""
authors = ["sergejnovozilov <sergey.novozhilov@upm.ai>"]
packages = [
    {include = "dash_app"},
    {include = "data_source"},
    {include = "utils"},
]

[tool.poetry.dependencies]
python = "^3.8"
dash = "^2.6.1"
plotly = "^5.9.0"
PyYAML = "^6.0"
uvloop = "^0.16.0"
asyncpg = "^0.26.0"
pandas = "^1.4.3"
psycopg2 = "^2.9.3"
dash-bootstrap-components = "^1.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dash_sample = "dash_app.scripts.runner:main"
data_source = "data_source.scripts.runner:main"
